# quack-rs

./: .gitignore  AUDIT.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LESSONS.md  LICENSE  README.md  RELEASING.md  SECURITY.md  book.toml  build.rs  deny.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
assets/logos/: gen_logos_v2.py  generate_logos.py
benches/: interval_bench.rs
book/src/: SUMMARY.md  contributing.md  faq.md  introduction.md  publishing.md  testing.md
book/src/concepts/: anatomy.md  entry-point.md  errors.md  types.md
book/src/data/: complex-types.md  intervals.md  nulls-and-strings.md  vectors.md
book/src/functions/: aggregate-sets.md  aggregate-state.md  aggregate.md  cast-functions.md  null-handling.md  replacement-scan.md  scalar.md  sql-macros.md  table-functions.md
book/src/getting-started/: first-extension.md  installation.md  quick-start.md  scaffold.md
book/src/reference/: changelog.md  known-limitations.md  pitfalls.md  type-id.md
book/theme/: custom.css  mermaid-loader.js
docs/: architecture.md  ffi-reference.md
examples/hello-ext/: Cargo.toml  README.md
examples/hello-ext/src/: lib.rs
scripts/: append_metadata.py
src/: config.rs  connection.rs  entry_point.rs  error.rs  interval.rs  lib.rs  prelude.rs  sql_macro.rs
src/aggregate/: builder.rs  callbacks.rs  mod.rs  state.rs
src/aggregate/builder/: mod.rs  set.rs  single.rs  tests.rs
src/cast/: builder.rs  mod.rs
src/replacement_scan/: mod.rs
src/scaffold/: mod.rs  templates.rs  tests.rs
src/scalar/: builder.rs  mod.rs
src/scalar/builder/: mod.rs  set.rs  single.rs  tests.rs
src/table/: bind_data.rs  builder.rs  info.rs  init_data.rs  mod.rs
src/testing/: bundled_api_init.cpp  harness.rs  in_memory_db.rs  mock_registrar.rs  mock_vector.rs  mod.rs
src/types/: logical_type.rs  mod.rs  null_handling.rs  type_id.rs
src/validate/: description_yml.rs  extension_name.rs  function_name.rs  mod.rs  platform.rs  release_profile.rs  semver.rs  spdx.rs
src/validate/description_yml/: mod.rs  model.rs  parser.rs  tests.rs  validator.rs
src/vector/: complex.rs  mod.rs  reader.rs  string.rs  validity.rs  writer.rs
tests/: integration_test.rs
