[package]
name = "quack-rs"
version = "0.3.0"
edition = "2021"
rust-version = "1.84.1"
authors = ["Tom F."]
description = "Production-grade Rust SDK for building DuckDB loadable extensions"
license = "MIT"
repository = "https://github.com/tomtom215/quack-rs"
homepage = "https://docs.rs/quack-rs"
documentation = "https://docs.rs/quack-rs"
readme = "README.md"
keywords = ["duckdb", "extension", "ffi", "sql", "analytics"]
categories = ["database", "api-bindings"]
exclude = ["docs/", "examples/hello-ext/", ".github/", "book/"]

[lib]
name = "quack_rs"
crate-type = ["rlib"]

[dependencies]
libduckdb-sys = { version = "=1.4.4", features = ["loadable-extension"] }

[dev-dependencies]
duckdb = { version = "=1.4.4", features = ["bundled"] }
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow common SDK API patterns that trigger noisy false-positives
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
return_self_not_must_use = "allow"
