[package]
name = "quack-rs"
version = "0.5.0"
edition = "2021"
rust-version = "1.84.1"
authors = ["Tom F. <tomf@tomtomtech.net>"]
description = "Production-grade Rust SDK for building DuckDB loadable extensions"
license = "MIT"
repository = "https://github.com/tomtom215/quack-rs"
homepage = "https://quack-rs.com"
documentation = "https://docs.rs/quack-rs"
readme = "README.md"
keywords = ["duckdb", "extension", "ffi", "sql", "analytics"]
categories = ["database", "api-bindings", "development-tools::ffi"]
exclude = [
    "docs/",
    "examples/",
    ".github/",
    "book/",
    "book.toml",
    "assets/",
    "deny.toml",
    "AUDIT.md",
    "RELEASING.md",
    "LESSONS.md",
    "benches/",
]

[lib]
name = "quack_rs"
crate-type = ["rlib"]

[features]
## Enables wrappers for DuckDB 1.5.0 C API additions (e.g. scalar function local
## states, config option registration). Requires `libduckdb-sys >= 1.5.0` to be
## resolved by Cargo. Has no effect when compiled against libduckdb-sys 1.4.x.
##
## This feature is intentionally empty until libduckdb-sys 1.5.0 is published
## on crates.io, at which point version-specific wrappers will be added behind it.
duckdb-1-5 = []

## Links a bundled copy of DuckDB for integration testing.
##
## When this feature is enabled, the `testing::InMemoryDb` helper becomes available.
## It opens a real in-memory DuckDB database using the `duckdb` Rust crate, which
## bypasses the `loadable-extension` dispatch mechanism entirely.
##
## # Important: architectural limitation
##
## Even with this feature, quack-rs's own wrappers (`VectorReader`, `VectorWriter`,
## `Connection::register_*`) still route through the `loadable-extension` dispatch
## table and cannot be called in `cargo test`. Use `InMemoryDb` for SQL-level
## assertions (e.g. verifying SQL macro output) and `MockVectorWriter` /
## `MockVectorReader` for callback logic tests.
##
## # Usage in your extension
##
## ```toml
## [dev-dependencies]
## quack-rs = { version = "0.5", features = ["bundled-test"] }
## ```
bundled-test = ["dep:duckdb"]

[dependencies]
libduckdb-sys = { version = ">=1.4.4, <2", features = ["loadable-extension"] }
duckdb = { version = ">=1.4.4, <2", features = ["bundled"], optional = true }

[dev-dependencies]
duckdb = { version = ">=1.4.4, <2", features = ["bundled"] }
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1"
# Pin tempfile to avoid getrandom >=0.4 (which requires edition2024 / Rust >=1.85).
# proptest requires only `tempfile ^3`, so 3.14 satisfies it while keeping MSRV 1.84.1.
tempfile = "=3.14.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow common SDK API patterns that trigger noisy false-positives
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
return_self_not_must_use = "allow"
