[package]
name = "hello-ext"
version = "0.1.0"
edition = "2021"
rust-version = "1.84.1"
authors = ["Tom F"]
license = "MIT"
description = "Example DuckDB community extension built with quack-rs: word_count + first_word"

[lib]
name = "hello_ext"
crate-type = ["cdylib"]

[dependencies]
quack_rs = { path = "../..", package = "quack-rs" }
libduckdb-sys = { version = "=1.4.4", features = ["loadable-extension"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = true
